# auro_calibration

./: CMakeLists.txt  README.md  package.xml
launch/: bag_replay.launch  camera_calibration.launch  image_proc.launch  lidar_calibrator.launch
scripts/: test.py
src/: lidar_calibrator.cpp
